Fixed column misalignment and Learn More text

--- a/styles/main.css
+++ b/styles/main.css
@@ -321,6 +321,14 @@ p, body {
     padding-right: 15px;
     padding-left: 15px;
   }
+  /* Place text in the middle of the image */
+  .low-text {
+      position: absolute;
+      top: 90%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+  }
 }
 
 @media screen and (min-width: 577px) and (max-width: 768px) {
